test/sema/negative/array_equality.impala
extern "C" { fn puts(&[u8]) -> (); }

fn main() -> () {
    let i = [1, 2, 3, 4];
    let j = [1, 2, 3, 4];
    if i == j {
        puts("equal")
    }
}

